@@ -1,3 +1,7 @@
+2000-08-17  Per Bothner  <per@bothner.com>
+
+	* Invoke.java (applyN):  Update for new MethodProc protocol.
+
 2000-06-17  Per Bothner  <per@bothner.com>
 
 	* InstanceOf.java:  Moved from kawa.standard.
